# mcpscaffold

./: .gitignore  AGENTS.md  README.md  go.mod  main.go  mcpscaffold_test.go
.github/workflows/: ci.yml
internal/cli/: root.go
internal/template/: generate.go
internal/template/templates/golang/: AGENTS.md  README.md  go.mod  main.go  main_test.go
internal/template/templates/golang/.github/workflows/: ci.yml
internal/template/templates/python/: .gitignore  AGENTS.md  README.md  prompts.py  pyproject.toml  resources.py  server.py  tools.py
internal/template/templates/python/.github/workflows/: ci.yml
internal/template/templates/python/tests/: test_server.py  test_tools.py
internal/template/templates/typescript/: .gitignore  AGENTS.md  README.md  index.ts  package.json  tools.ts  tsconfig.json  vitest.config.ts
internal/template/templates/typescript/.github/workflows/: ci.yml
internal/template/templates/typescript/tests/: test_server.ts
