[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{PROJECT_NAME_LOWER}}"
version = "0.1.0"
description = "{{DESCRIPTION}}"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "EdgarOrtegaRamirez"}]
requires-python = ">=3.11"
dependencies = ["mcp>=1.28.0"]

[project.scripts]
{{PROJECT_NAME_LOWER}} = "{{PROJECT_NAME_LOWER}}.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
